# fw-tem-hum

./: .gitignore  README.md  ahtx0.py  base-project.code-workspace  main.py  pymakr.conf  pyproject.toml  secrets_example.json
3ce90e7cb2c4/: main.py  wifimgr.py
utils/: wifimgr.py
