[project]
name = "fw-temp-hum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
stubs = ["micropython-esp32-esp32_generic_c3-stubs==1.23.0.post2"]

[tool.pyright]
# include = ["src"]
ignore = ["**/typings"]
exclude = [".*", "__*", "**/typings"]

typeCheckingMode = "standard"
stubPath = "typings"
typeshedPath = "typings"
pythonPlatform = "All"
pythonVersion = "3.13"

reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "information"
reportOptionalMemberAccess = "none"
